--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.4",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.42.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
